--- a/package.json
+++ b/package.json
@@ -12,25 +12,20 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "start": "concurrently -n app,storybook 'yarn start:app' 'yarn start:storybook'",
+    "start:app": "react-scripts start",
+    "start:storybook": "start-storybook -p 9009 -s public",
+    "build": "concurrently -n app,storybook 'yarn build:app' 'yarn build:storybook'",
+    "build:app": "react-scripts build",
+    "build:storybook": "build-storybook -s storybook",
+    "lint": "standard --env jest"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
