--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
     "lint": "standard --env jest"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -39,6 +46,8 @@
     "@storybook/node-logger": "^6.1.20",
     "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "^6.1.20",
-    "concurrently": "^6.0.0"
+    "concurrently": "^6.0.0",
+    "eslint": "^7.21.0",
+    "eslint-plugin-react": "^7.22.0"
   }
 }
