--- a/package.json
+++ b/package.json
@@ -19,20 +19,13 @@
     "build": "concurrently -n app,storybook 'yarn build:app' 'yarn build:storybook'",
     "build:app": "react-scripts build",
     "build:storybook": "build-storybook -s storybook",
-    "lint": "standard --env jest"
+    "lint": "eslint ."
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
