--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
     "build:storybook": "build-storybook -s storybook",
     "lint": "eslint ."
   },
-  "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
-  },
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
@@ -41,6 +38,9 @@
     "@storybook/react": "^6.1.20",
     "concurrently": "^6.0.0",
     "eslint": "^7.21.0",
-    "eslint-plugin-react": "^7.22.0"
+    "eslint-plugin-react": "^7.22.0",
+    "node-sass": "^5.0.0",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.2"
   }
 }
