--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "concurrently -n app,storybook 'yarn build:app' 'yarn build:storybook'",
     "build:app": "react-scripts build",
     "build:storybook": "build-storybook -s storybook",
-    "lint": "eslint ."
+    "lint": "eslint --ext .js --ext .jsx src/ ",
+    "lint-fix": "eslint --ext .js --ext .jsx src/ --fix"
   },
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
@@ -38,9 +39,12 @@
     "@storybook/react": "^6.1.20",
     "concurrently": "^6.0.0",
     "eslint": "^7.21.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
     "node-sass": "^5.0.0",
-    "prettier": "^2.2.1",
     "typescript": "^4.2.2"
   }
 }
